--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,9 @@
     },
     "autoload": {
         "files": [
-            "php/members.php",
-            "php/dba.php"
+            "php/dba.php",
+            "php/member.php",
+            "php/members.php"
         ]
     }
 }
