--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
+        "tomk79/filesystem": "^1.0",
         "tomk79/csv2json": "^1.0"
     },
     "require-dev": {
@@ -27,7 +28,8 @@
         "files": [
             "php/dba.php",
             "php/member.php",
-            "php/members.php"
+            "php/members.php",
+            "php/utils.php"
         ]
     }
 }
